--- a/index.html
+++ b/index.html
@@ -7,13 +7,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body class="bg-gray p-0.25 ">
+
+    <!-- Navbar -->
     <nav class="navbar-dark bg-dark">
         <h1 class="text-center text-light">Mobile InTouch</h1>
       </nav>
+
+      <!-- Input Field -->
       <div class=" input-group w-50 mx-auto">
         <input type="text" class="form-control" placeholder="Search mobile name" aria-label="Recipient's username" aria-describedby="button-addon2">
         <button class="btn btn-outline-dark" type="button" >Search</button>
       </div>
+
+      <!-- Home Page -->
+      <section>
+        <div class="text-center mx-auto ">
+            <p>New</p>
+            <h2>iPhone 14</h2>
+            <h1 class="text-info">Big and bigger</h1>
+            <p>From $33.29/mo. for 24 mo. or $799 before trade‑in</p>
+            <img src="/Image/Apple-iPhone-14-iPhone-14-Plus-hero-220907_Full-Bleed-Image.jpg.large.jpg" alt="" srcset="">
+        </div>
+      </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
